<resources>
    <string name="app_name">Unsafe AmiiWrite</string>
    <string name="version_code">2</string>
    <string name="version_name">1.1</string>

    <string name="menu_drawer_my_amiibos">My amiibos</string>
    <string name="menu_drawer_addbin">Add binary file</string>
    <string name="file_read_err">Unable to open file</string>
    <string name="file_read_root_err">Unable to open file as root</string>
    <string name="file_not_found">File not found</string>
    <string name="file_choose">Choose file</string>
    <string name="pages_header">NFC chip content :</string>
    <string name="waiting_for_scan">Waiting for any amiibo to scan...</string>
    <string name="woops">Woops! Please retry</string>
    <string name="amiibo_void_name">Scanned information</string>
    <string name="add_amiibo_name_title">Name this amiibo</string>
    <string name="scan_an_amiibo">Scan an amiibo</string>
    <string name="add_amiibo_name_text">It will help you differentiate this data set from other saved data</string>
    <string name="add_amiibo_game_name_title">What is its game save ?</string>
    <string name="add_amiibo_game_name_text">It will help you differentiate this data set from other saved data</string>
    <string name="canceled">Canceled</string>
    <string name="written_successfully">The amiibo has been successfully written</string>
    <string name="menu_drawer_github">Source code</string>
    <string name="menu_drawer_legal">App by codlab, edited by skyforce77. The amiibo belongs to Nintendo, etc... (for more legal, please go to the official amiibo website, they have what you need)</string>
    <string name="menu_drawer_twitter">\@codlab</string>
    <string name="menu_drawer_website">Website</string>
    <string name="new_version_title">A new version is available</string>
    <string name="new_version_content">Do you want to download it from the web ?</string>
    <string name="uploading">Uploading...</string>
    <string name="menu_drawer_sync_drive">Sync Google Drive</string>
    <string name="sync_with_drive">Sync with your Google Drive account</string>
</resources>
